--- a/static/auto_completions/item/components.json
+++ b/static/auto_completions/item/components.json
@@ -65,22 +65,8 @@
                 }
             },
 
-            "$dynamic_template.is_equipped": {
-                "$key": "$dynamic.setting.target_version",
-                "$default": "$entity.components",
-                "$fallback": "$entity.components",
-
-                "Stable": "$entity.components",
-                "Beta": "$entity.components and $entity.beta_components"
-            },
-            "$dynamic_template.is_not_equipped": {
-                "$key": "$dynamic.setting.target_version",
-                "$default": "$entity.components",
-                "$fallback": "$entity.components",
-
-                "Stable": "$entity.components",
-                "Beta": "$entity.components and $entity.beta_components"
-            }
+            "$dynamic_template.is_equipped": "$entity.components",
+            "$dynamic_template.is_not_equipped": "$entity.components"
         }
     }
 }
