--- a/static/auto_completions/item/components.json
+++ b/static/auto_completions/item/components.json
@@ -65,8 +65,8 @@
                 }
             },
 
-            "$dynamic_template.is_equipped": "$entity.components",
-            "$dynamic_template.is_not_equipped": "$entity.components"
+            "is_equipped": "$entity.components",
+            "is_not_equipped": "$entity.components"
         }
     }
 }
